# CyberLog-Analyzer

./: .gitignore  Dockerfile  README.md  build_frontend.py  launch.py  pyproject.toml  run.bat  run.sh
apps/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/analytics/: admin.py  apps.py  models.py  urls.py  views.py
apps/analytics/migrations/: 0001_initial.py
apps/analytics/ml/: __init__.py  anomaly.py  bruteforce.py  engine.py  features.py  login.py  scoring.py  traffic.py
apps/dashboard/: admin.py  api.py  apps.py  models.py  urls.py  views.py
apps/logs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/logs/management/commands/: load_sample_data.py
apps/logs/migrations/: 0001_initial.py
apps/logs/parsers/: __init__.py  apache.py  auth.py  base.py  firewall.py  nginx.py  ssh.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
static/js/: charts.js  dashboard.js
templates/: base.html
templates/accounts/: login.html  profile.html  register.html
templates/analytics/: alerts.html
templates/components/: pagination.html
templates/dashboard/: overview.html  reports.html
templates/logs/: detail.html  list.html  upload.html
